force-app/main/default/objects/Submission__c/fields/Availability_for_Interview__c.field-meta.xml
<CustomField>
    <fullName>Availability_for_Interview__c</fullName>
    <description>Candidate&apos;s choice for interview</description>
    <label>Availability for Interview</label>
    <type>Date</type>
</CustomField>