force-app/main/default/objects/Submission__c/fields/Available_to_Start__c.field-meta.xml
<CustomField>
    <fullName>Available_to_Start__c</fullName>
    <description>Availability of candidate to Start</description>
    <label>Available to Start</label>
    <type>Date</type>
</CustomField>