force-app/main/default/objects/Submission__c/fields/BGC_date__c.field-meta.xml
<CustomField>
    <fullName>BGC_date__c</fullName>
    <description>Date of BGC completion</description>
    <label>BGC date</label>
    <type>Date</type>
</CustomField>