force-app/main/default/objects/Submission__c/fields/Candidate_Recruiter__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Recruiter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Recruiter is the Application has been submitted through Job matching(Candidate Sourcing)</description>
    <label>Candidate Recruiter</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Submissions1</relationshipName>
    <type>Lookup</type>
</CustomField>