force-app/main/default/objects/Submission__c/fields/Cover_Letter__c.field-meta.xml
<CustomField>
    <fullName>Cover_Letter__c</fullName>
    <label>Cover Letter</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>