force-app/main/default/objects/Submission__c/fields/Desired_Salary__c.field-meta.xml
<CustomField>
    <fullName>Desired_Salary__c</fullName>
    <description>Candidate&apos;s expectation on the Salary</description>
    <label>Desired Salary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>