force-app/main/default/objects/Submission__c/fields/Drug_test_date__c.field-meta.xml
<CustomField>
    <fullName>Drug_test_date__c</fullName>
    <description>Healcare Specific</description>
    <label>Drug test date</label>
    <type>Date</type>
</CustomField>