force-app/main/default/objects/Submission__c/fields/Drug_Test_Status__c.field-meta.xml
<CustomField>
    <fullName>Drug_Test_Status__c</fullName>
    <description>Pending, Passed, failed (Healthcare Specific)</description>
    <label>Drug Test Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Passed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>