force-app/main/default/objects/Submission__c/fields/Hiring_Manager__c.field-meta.xml
<CustomField>
    <fullName>Hiring_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Hiring Manager responsible for this position</description>
    <label>Hiring Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Submissions (Hiring Manager)</relationshipLabel>
    <relationshipName>Submissions1</relationshipName>
    <type>Lookup</type>
</CustomField>