force-app/main/default/objects/Submission__c/fields/Interview_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>Interview_Scheduled_Date__c</fullName>
    <description>Date of the Upcoming/recent interview</description>
    <label>Interview Scheduled Date</label>
    <type>Date</type>
</CustomField>