force-app/main/default/objects/Submission__c/fields/Job__c.field-meta.xml
<CustomField>
    <fullName>Job__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Job Applied for</description>
    <label>Job</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Job__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Job</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Job__c</referenceTo>
    <relationshipLabel>Submissions</relationshipLabel>
    <relationshipName>Submissions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>