force-app/main/default/objects/Submission__c/fields/Job_Recruiter__c.field-meta.xml
<CustomField>
    <fullName>Job_Recruiter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Recruiter responsible for the position</description>
    <label>Job Recruiter</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Submissions</relationshipName>
    <type>Lookup</type>
</CustomField>