force-app/main/default/objects/Submission__c/fields/Latest_Interview_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Latest_Interview_Feedback__c</fullName>
    <description>Feedback notes post-interview</description>
    <label>Latest Interview Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>