force-app/main/default/objects/Submission__c/fields/Offer_Date__c.field-meta.xml
<CustomField>
    <fullName>Offer_Date__c</fullName>
    <description>Date offer was extended to candidate</description>
    <label>Offer Date</label>
    <type>Date</type>
</CustomField>