force-app/main/default/objects/Submission__c/fields/Offered_Salary__c.field-meta.xml
<CustomField>
    <fullName>Offered_Salary__c</fullName>
    <description>Monetary amount proposed in offer</description>
    <label>Offered Salary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>