force-app/main/default/objects/Submission__c/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <description>Reason for the rejection if rejected</description>
    <label>Rejection Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>