force-app/main/default/objects/Submission__c/fields/Resume__c.field-meta.xml
<CustomField>
    <fullName>Resume__c</fullName>
    <description>Attachement of the Resume file</description>
    <label>Resume</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>