force-app/main/default/objects/Submission__c/fields/Submission_Wthdrawal_Date__c.field-meta.xml
<CustomField>
    <fullName>Submission_Wthdrawal_Date__c</fullName>
    <description>Date on which the Candidate withdrew from this Job Submission</description>
    <label>Submission Wthdrawal Date</label>
    <type>Date</type>
</CustomField>