force-app/main/default/objects/Submission__c/fields/Withdrawal_Reason__c.field-meta.xml
<CustomField>
    <fullName>Withdrawal_Reason__c</fullName>
    <description>Reason for withdrawing the application</description>
    <label>Withdrawal Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>