force-app/main/default/objects/Submission__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Candidate__c</columns>
    <columns>Job__c</columns>
    <columns>Job_Title__c</columns>
    <columns>Source__c</columns>
    <columns>Available_to_Start__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>