force-app/main/default/objects/Submission__c/listViews/All_Submissions.listView-meta.xml
<ListView>
    <fullName>All_Submissions</fullName>
    <columns>NAME</columns>
    <columns>Candidate__c</columns>
    <columns>Job__c</columns>
    <columns>Job_Title__c</columns>
    <columns>Client__c</columns>
    <columns>Available_to_Start__c</columns>
    <columns>Submission_Status__c</columns>
    <columns>Submission_Date__c</columns>
    <columns>Source__c</columns>
    <columns>Offer_Date__c</columns>
    <filterScope>Mine</filterScope>
    <label>All Submissions</label>
</ListView>